--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,17 +4,14 @@
   </div>
   <div class="col-md-offset-1 col-md-5">
     <h2> Welcome! </h2>
-    <ul> #YoloSwaggins </ul>
-    <li>This is a site where you can gather and list your favorite youtube links</li>
-    <li>Why bother?</li>
-    <li>Because it sucks to navigate youtube.com</li>
-    <li>And you need a youtube user to do it</li>
-    <li>But this site also needs a user?</li>
-    <li>Jupp...</li>
+    <p> The way we organize our favourite youtube clips are something that you sould care about. </p>
+    <br />
+    <br />
+    <br />
+    <br />
+   <%= link_to "Sign up!", new_user_path, {:style=>'color:#fff', :class => "btn btn-primary btn-lg"} %>
+    
 
-    <br />
-    <br />
-    <br />
     <br />
     <br />
   </div>
