--- a/app/views/site/_topnav.html.erb
+++ b/app/views/site/_topnav.html.erb
@@ -14,10 +14,25 @@
   <!-- Collect the nav links, forms, and other content for toggling -->
   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
     <ul class="nav navbar-nav">
-      <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-      <li><a href="#">Link</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
+      <form accept-charset="UTF-8" action="/login "class="navbar-form navbar-right" method="post" role="search">
+        <div class="form-group">
+          <input id="email" name="email" type="text" class="form-control" placeholder="Email">
+        </div>
+        <div class="form-group">
+          <input id="password" name="password" type="password" class="form-control" placeholder="Password">
+        </div>
+        <button type="submit" class="btn btn-success">Log in</button>
+      </form>
+      <!-- dropdown here! -->
+    </ul>
+  </div><!-- /.navbar-collapse -->
+</div><!-- /.container-fluid -->
+</nav>
+
+<!--
+
       <li class="dropdown">
       <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
       <ul class="dropdown-menu" role="menu">
@@ -28,7 +43,4 @@
         <li><a href="#">Separated link</a></li>
       </ul>
       </li>
-    </ul>
-  </div><!-- /.navbar-collapse -->
-</div><!-- /.container-fluid -->
-</nav>
+-->
