--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,2 +1,21 @@
-<h1>Users#new</h1>
-<p>Find me in app/views/users/new.html.erb</p>
+<div class="form-signin">
+  <h2 class="form-signin-heading">Please sign up</h2>
+  <label for="inputUsername" class="sr-only">User name</label>
+  <input type="text" name="user[name]" id="user_name" class="form-control" placeholder="Username" required="" autofocus="">
+
+  <label for="inputEmail" class="sr-only">Email</label>
+  <input type="email" name="user[email]" id="user_email" class="form-control" placeholder="Email" required="">
+
+  <label for="inputPassword" class="sr-only">Password</label>
+  <input type="password" name="user[password]" id="user_password" class="form-control" placeholder="Password" required="">
+
+  <label for="inputPassword" class="sr-only">Password</label>
+  <input type="password" name="user[password_confirmation]" id="user_password_confirmation" class="form-control" placeholder="Password Confirmation" required="">
+
+  <div class="checkbox">
+    <label>
+      <input type="checkbox" value="remember-me"> Remember me
+    </label>
+  </div>
+   <input type="submit" name="commit" value="Create my account" class="btn btn-primary"></label>
+</form>
