--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,4 @@
+<!-- <form accept-charset=UTF-8" action="/users" class="new_user" id="new_user" method="post">
 <div class="form-signin">
   <h2 class="form-signin-heading">Please sign up</h2>
   <label for="inputUsername" class="sr-only">User name</label>
@@ -19,3 +20,30 @@
   </div>
    <input type="submit" name="commit" value="Create my account" class="btn btn-primary"></label>
 </form>
+
+-->
+
+<div class="row">
+  <%= form_for(@user) do |f| %>
+    <%= f.label :name %>
+    <div class="form-group">
+      <%= f.text_field :name %>
+    </div>
+    <%= f.label :email %>
+    <div class="form-group">
+      <%= f.text_field :email %>
+    </div>
+
+    <%= f.label :password %>
+    <div class="form-group">
+      <%= f.password_field :password %>
+    </div>
+
+    <%= f.label :password_confirmation, "Confirmation" %>
+    <div class="form-group">
+      <%= f.password_field :password_confirmation %>
+    </div>
+
+    <%= f.submit "Create my account", class: "btn btn-primary" %>
+  <% end %>
+</div>
