--- a/app/views/site/_topnav.html.erb
+++ b/app/views/site/_topnav.html.erb
@@ -12,35 +12,50 @@
   </div>
 
   <!-- Collect the nav links, forms, and other content for toggling -->
+  <% if !logged_in? %>
   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
     <ul class="nav navbar-nav">
     </ul>
     <ul class="nav navbar-nav navbar-right">
-      <form accept-charset="UTF-8" action="/login "class="navbar-form navbar-right" method="post" role="search">
-        <div class="form-group">
-          <input id="email" name="email" type="text" class="form-control" placeholder="Email">
-        </div>
-        <div class="form-group">
-          <input id="password" name="password" type="password" class="form-control" placeholder="Password">
-        </div>
-        <button type="submit" class="btn btn-success">Log in</button>
-      </form>
-      <!-- dropdown here! -->
-    </ul>
-  </div><!-- /.navbar-collapse -->
+      <div class="navbar-form navbar-right">
+        <%= form_for(:session, url: login_path) do |f| %>
+          <div class="form-group">
+            <%= f.email_field :email, class: 'form-control', placeholder: 'Email' %>
+          </div>
+          <div class="form-group">
+            <%= f.password_field :password, class: 'form-control', placeholder: 'Password' %>
+          </div>
+
+          <%= f.submit "Log in", class: "btn btn-success" %>
+        <% end %>
+      </div>
+    <%end%>
+    <!-- dropdown here! -->
+  </ul>
+</div><!-- /.navbar-collapse -->
 </div><!-- /.container-fluid -->
 </nav>
 
 <!--
 
-      <li class="dropdown">
-      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
-      <ul class="dropdown-menu" role="menu">
-        <li><a href="#">Action</a></li>
-        <li><a href="#">Another action</a></li>
-        <li><a href="#">Something else here</a></li>
-        <li class="divider"></li>
-        <li><a href="#">Separated link</a></li>
-      </ul>
-      </li>
+<form accept-charset="UTF-8" action="/login "class="navbar-form navbar-right" method="post" role="search">
+  <div class="form-group">
+    <input id="email" name="email" type="text" class="form-control" placeholder="Email">
+  </div>
+  <div class="form-group">
+    <input id="password" name="password" type="password" class="form-control" placeholder="Password">
+  </div>
+  <button type="submit" class="btn btn-success">Log in</button>
+</form>
+
+<li class="dropdown">
+<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
+<ul class="dropdown-menu" role="menu">
+  <li><a href="#">Action</a></li>
+  <li><a href="#">Another action</a></li>
+  <li><a href="#">Something else here</a></li>
+  <li class="divider"></li>
+  <li><a href="#">Separated link</a></li>
+</ul>
+</li>
 -->
