--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,27 @@
-<%= gravatar_for @user %>
-<%= @user.name %>
-<%= @user.email %>
+<div class="col-md-5" style="margin-left: -30px">
+  <h3>  
+    <%= gravatar_for @user %>
+    <%= @user.name %>
+  </h3>
+
+  <% if logged_in? && current_user == @user %>
+    <%= link_to 'Edit profile', edit_user_path(current_user) %> |
+    <%= link_to "Logout", logout_path %>
+
+    <br />
+    <br />
+    <br />
+
+
+
+
+    <%= render 'new_video_form' %>
+
+
+    <%#= link_to 'New video', new_youtubelist_path %>
+  <% end %>
+</div>
+
+<div class="col-md-offset-1 col-md-6">
+  <%= render 'site/youtubelist'%>
+</div>
