--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -22,6 +22,14 @@
   <% end %>
 </div>
 
-<div class="col-md-offset-1 col-md-6">
-  <%= render 'site/youtubelist'%>
+<div class="col-md-6">
+
+  <ul class="nav nav-tabs">
+   <li role="presentation" class="active"><a href="#">Home</a></li>
+    <li role="presentation"><a href="#">Profile</a></li>
+     <li role="presentation"><a href="#">Messages</a></li>
+     <li role="presentation"><a href="#">Messages</a></li>
+     <li role="presentation"><a href="#">Messages</a></li>
+   </ul>
+   <%= render 'site/youtubelist'%>
 </div>
