--- a/app/views/site/_topnav.html.erb
+++ b/app/views/site/_topnav.html.erb
@@ -2,37 +2,42 @@
 <div class="container-fluid">
   <!-- Brand and toggle get grouped for better mobile display -->
   <div class="navbar-header">
-    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-      <span class="sr-only">Toggle navigation</span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-    </button>
     <a class="navbar-brand" href="/">ListPlays</a>
-  </div>
+    <% if logged_in? %>
+      <ul class="nav navbar-nav navbar">
+        <li><%= link_to "Profile Page", current_user %></li>
+      </ul>
+    <%end%>
+    <% if !logged_in? %>
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+    </div>
 
   <!-- Collect the nav links, forms, and other content for toggling -->
-  <% if !logged_in? %>
   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
     <ul class="nav navbar-nav">
     </ul>
     <ul class="nav navbar-nav navbar-right">
-      <div class="navbar-form navbar-right">
-        <%= form_for(:session, url: login_path) do |f| %>
-          <div class="form-group">
-            <%= f.email_field :email, class: 'form-control', placeholder: 'Email' %>
-          </div>
-          <div class="form-group">
-            <%= f.password_field :password, class: 'form-control', placeholder: 'Password' %>
-          </div>
+        <div class="navbar-form navbar-right">
+          <%= form_for(:session, url: login_path) do |f| %>
+            <div class="form-group">
+              <%= f.email_field :email, class: 'form-control', placeholder: 'Email' %>
+            </div>
+            <div class="form-group">
+              <%= f.password_field :password, class: 'form-control', placeholder: 'Password' %>
+            </div>
 
-          <%= f.submit "Log in", class: "btn btn-success" %>
-        <% end %>
-      </div>
-    <%end%>
-    <!-- dropdown here! -->
-  </ul>
-</div><!-- /.navbar-collapse -->
+            <%= f.submit "Log in", class: "btn btn-success" %>
+          <% end %>
+        </div>
+      <%end%>
+      <!-- dropdown here! -->
+    </ul>
+  </div><!-- /.navbar-collapse -->
 </div><!-- /.container-fluid -->
 </nav>
 
