basic styling and alignment

--- a/app/views/users/_new_video_form.html.erb
+++ b/app/views/users/_new_video_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_for(@url) do |f| %>
   <div class="field">
-    <%= f.text_field :url, placeholder: "Add youtube link.." %>
+    <%= f.text_field :url, class: 'form-control', placeholder: "Add youtube link.." %>
   </div>
   <button type="submit" class="btn btn-default">+</button>
 <% end %>
