--- a/app/views/users/_new_video_form.html.erb
+++ b/app/views/users/_new_video_form.html.erb
@@ -1,6 +1,7 @@
 <%= form_for(@url) do |f| %>
   <div class="field">
     <%= f.text_field :url, class: 'form-control', placeholder: "Add youtube link.." %>
+    <%= f.text_field :category, class: 'form-control', placeholder: "add category" %>
   </div>
-  <button type="submit" class="btn btn-default">+</button>
+    <button type="submit" class="btn btn-default">+</button>
 <% end %>
