fix topbanner bug

--- a/app/views/site/_topnav.html.erb
+++ b/app/views/site/_topnav.html.erb
@@ -4,9 +4,7 @@
   <div class="navbar-header">
     <a class="navbar-brand" href="/">ListPlays</a>
     <% if logged_in? %>
-      <ul class="nav navbar-nav navbar">
-        <li><%= link_to "Profile Page", current_user %></li>
-      </ul>
+      <p class="navbar-text">Signed in as <%= link_to current_user.name, current_user %> </p>
     <%end%>
     <% if !logged_in? %>
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -36,7 +34,6 @@
         </div>
       <%end%>
       <!-- dropdown here! -->
-    </ul>
   </div><!-- /.navbar-collapse -->
 </div><!-- /.container-fluid -->
 </nav>
