--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 
     <%= render 'site/topnav' %>
 
-    <div class="container">
+    <div class="container" style="margin-left: -25px;">
       <%= yield %>
     </div>
 
