--- a/app/views/users/_new_video_form.html.erb
+++ b/app/views/users/_new_video_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for(@url) do |f| %>
   <div class="field">
-    <%= f.text_field :url, class: 'form-control', placeholder: "Add youtube link.." %>
-    <%= f.text_field :category, class: 'form-control', placeholder: "add category" %>
+    <%= f.text_field :url, class: 'form-control', placeholder: "add youtube link.." %>
+    <%= f.text_field :category, class: 'form-control', placeholder: "category.." %>
   </div>
-    <button type="submit" class="btn btn-default">+</button>
+    <button style="margin-bottom: 10px;" type="submit" class="btn btn-default">+</button>
 <% end %>
