--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -22,3 +22,18 @@ button.btn.btn-default{
 .category{
   display:none;
 }
+
+.shadowbox{
+  box-shadow: 2px 2px 3px #666666;
+}
+
+.lightgray{
+  background-color: #efefef;
+}
+
+.white{
+  background-color: #ffffff;
+}
+.center{
+  margin: auto;
+}
