--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,11 +7,11 @@
     <%= csrf_meta_tags %>
     <meta name="viewport" content="width=device-width", initial-scale=1.0">
   </head>
-  <body>
+  <body class="lightgray">
 
     <%= render 'site/topnav' %>
 
-    <div class="container" style="margin-left: -25px;">
+    <div class="container center" >
       <%= yield %>
     </div>
 
