--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,9 +1,9 @@
 <div class="row">
-  <div class="col-md-4" style="margin-left: 15px;">
+  <div class="col-md-4">
     <h3>New Users</h3>
     <%= render 'user_gravatars' %>
   </div>
-  <div class="col-md-8" style="margin-left: 15px;">
+  <div class="col-md-8">
     <h2> Welcome! </h2>
     <p> The way we organize our favourite youtube clips are something that you sould care about. </p>
     <br />
