styling the boxes

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -31,6 +31,14 @@ button.btn.btn-default{
   box-shadow: 2px 2px 3px #666666;
 }
 
+.boxmargin{
+  margin: 0 5px 5px 5px;
+}
+
+.boxpadding{
+  padding: 1px 0 10px 10px;
+}
+
 .lightgray{
   background-color: #efefef;
 }
