--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<div class="col-md-5 shadowbox white" style="margin: 0 5px 5px 0">
+<div class="col-md-5 shadowbox white boxmargin boxpadding" ">
     <h3>  
       <%= gravatar_for @user %>
       <%= @user.name %>
