--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,9 +1,9 @@
 <div class="row">
-  <div class="col-md-4">
-    <h3>New Users</h3>
+  <div class="col-md-4 shadowbox white boxmargin boxpadding">
+    <h4>New Users</h4>
     <%= render 'user_gravatars' %>
   </div>
-  <div class="col-md-8">
+  <div class="col-md-6 shadowbox white boxpadding">
     <h2> Welcome! </h2>
     <p> The way we organize our favourite youtube clips are something that you sould care about. </p>
     <br />
