--- a/app/views/site/_topnav.html.erb
+++ b/app/views/site/_topnav.html.erb
@@ -1,63 +1,5 @@
-<nav class="navbar navbar-inverse">
-<div class="container-fluid">
-  <!-- Brand and toggle get grouped for better mobile display -->
-  <div class="navbar-header">
-    <a class="navbar-brand" href="/">ListPlays</a>
-    <% if logged_in? %>
-      <p class="navbar-text">Signed in as <%= link_to current_user.name, current_user %> </p>
-    <%end%>
-    <% if !logged_in? %>
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-    </div>
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <div class="navbar-form navbar-right">
-          <%= form_for(:session, url: login_path) do |f| %>
-            <div class="form-group">
-              <%= f.email_field :email, class: 'form-control', placeholder: 'Email' %>
-            </div>
-            <div class="form-group">
-              <%= f.password_field :password, class: 'form-control', placeholder: 'Password' %>
-            </div>
-
-            <%= f.submit "Log in", class: "btn btn-success" %>
-          <% end %>
-        </div>
-      <%end%>
-      <!-- dropdown here! -->
-  </div><!-- /.navbar-collapse -->
-</div><!-- /.container-fluid -->
-</nav>
-
-<!--
-
-<form accept-charset="UTF-8" action="/login "class="navbar-form navbar-right" method="post" role="search">
-  <div class="form-group">
-    <input id="email" name="email" type="text" class="form-control" placeholder="Email">
-  </div>
-  <div class="form-group">
-    <input id="password" name="password" type="password" class="form-control" placeholder="Password">
-  </div>
-  <button type="submit" class="btn btn-success">Log in</button>
-</form>
-
-<li class="dropdown">
-<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
-<ul class="dropdown-menu" role="menu">
-  <li><a href="#">Action</a></li>
-  <li><a href="#">Another action</a></li>
-  <li><a href="#">Something else here</a></li>
-  <li class="divider"></li>
-  <li><a href="#">Separated link</a></li>
-</ul>
-</li>
--->
+<% if logged_in? %>
+  <%= render 'site/nloggedin'%>
+<% else %>
+  <%= render 'site/nloggedout'%>
+<%end%>
