--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,15 +1,11 @@
-<div class="col-md-5 shadowbox white boxmargin boxpadding" ">
+<div class="col-md-4 shadowbox white boxmargin boxpadding ">
     <h3>  
       <%= gravatar_for @user %>
       <%= @user.name %>
     </h3>
 
     <% if logged_in? && current_user == @user %>
-      <%= link_to 'Edit profile', edit_user_path(current_user) %> |
-      <%= link_to "Logout", logout_path %>
 
-      <br />
-      <br />
       <br />
 
 
