--- a/app/views/site/_youtubelist.html.erb
+++ b/app/views/site/_youtubelist.html.erb
@@ -2,7 +2,9 @@
   <div class="category" id="<%= category.try(:parameterize) %>">
     <% youtubelist.each do |youtubelist| %>
       <div class="youtubeitem"> 
-        <iframe width="310" height="195" src="//www.youtube.com/embed/<%= youtubelist.url.html_safe %>" frameborder="0" allowfullscreen>f</iframe>
+        <div class="embed-responsive embed-responsive-16by9">
+          <iframe class="embed-responsive-item" src="//www.youtube.com/embed/<%= youtubelist.url.html_safe %>"></iframe>
+        </div>
         <br/>
         <% if logged_in? && current_user == @user %>
           <%= link_to "Delete", youtubelist_delete_path(youtubelist), class: 'btn btn-default btn-xs' %>
