--- a/app/views/site/_nloggedin.html.erb
+++ b/app/views/site/_nloggedin.html.erb
@@ -15,13 +15,13 @@
     <ul class="nav navbar-nav">
     </ul>
     <ul class="nav navbar-nav navbar-right">
-        <p class="navbar-text">Signed in as <%= link_to current_user.name, current_user %> </p>
+        <p class="navbar-text">Signed in as <%= link_to current_user.name, current_user %>  |
+        <%= link_to "Logout", logout_path %>
         <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Profile<span class="caret"></span></a>
         <ul class="dropdown-menu" role="menu">
           <li><%= link_to 'Edit profile', edit_user_path(current_user) %></li>
           <li class="divider"></li>
-          <li><%= link_to "Logout", logout_path %></li>
         </ul>
         </li>
     <!-- dropdown here! -->
