editing home text

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,7 +5,7 @@
   </div>
   <div class="col-md-6 shadowbox white boxpadding">
     <h2> Welcome! </h2>
-    <p> The way we organize our favourite youtube clips are something that you sould care about. </p>
+    <p> The way we organize our favourite youtube clips are something that you should care about.</p>
     <br />
     <br />
     <%= link_to "Sign up!", new_user_path, {:style=>'color:#fff', :class => "btn btn-primary btn-lg"} %>
